--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -843,13 +843,17 @@ https://pro-status-service-prod.azurewebsites.net/api/item url script-response-b
 #^https:\//maimai.cn\/bizmember\/vip_center\/me_tab_page_banner url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/maimai/mypage.js
 	
 # 爱企查vip
-#^http:\/\/rest\.zhibo\.tv\/room\/get\-pull\-stream\-info\-v430 url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zgtyzb.js
+^https:\//aiqicha.baidu.com\/usercenter\/getvipinfoajax url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/aiqicha.js
+
+#中国体育直播unlock
+^http:\/\/rest\.zhibo\.tv\/room\/get\-pull\-stream\-info\-v430 url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zgtyzb.js
+^http:\/\/rest\.zhibo\.tv\/room\/get\-pull\-stream\-info\-v430 url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zgtyzb.js
 	
  # 有道云笔记vip
 ^https://note.youdao.com/yws/(mapi/payment|api/self) url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/ydybj.js
 	
 # 滴答清单vip
-^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/DiDaQingDan.js
+#^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/DiDaQingDan.js
 	
 # XMind思维导图 (by @JigsaWo)
 #https:\/\/www\.xmind\.cn\/\_res\/devices url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/XMind.js
@@ -865,7 +869,7 @@ https://pro-status-service-prod.azurewebsites.net/api/item url script-response-b
 
 
 # > 我奥篮球 （20210515） by photonmang
-http://api.woaoo.net/.+ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/walq.js
+#http://api.woaoo.net/.+ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/walq.js
 	
 # > 作业帮 （20210407） by photonmang
 https://mall.zuoyebang.com/mall/goods/audio/voice/list?audioId=\d+ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/zyb.js
@@ -880,7 +884,7 @@ https://apivip.zybang.com/vipols/vip/viphomev1?.+ url script-response-body https
 ^https?://shimo.im/lizard-api/users/ url script-response-body https://raw.githubusercontent.com/Wizardp007/Scripts/main/QuantumultX/jss/shimo.js
 
 # 花椒视频 (By Alex0510)
-http://user.shywck.com/user/userinfo url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/hjsp.js
+#http://user.shywck.com/user/userinfo url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/hjsp.js
 
 # 迅捷应用6合1 （by LTribe）
 ^https?:\/\/.*\.xunjie.*\.com\/api\/v\d\/* url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/xunjie.js
@@ -906,7 +910,7 @@ http://user.shywck.com/user/userinfo url script-response-body https://raw.ev2.wo
 #^http://ctrl.playcvn.com/app/(init|ads) url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/YYeTs.js
 
 #每日英语阅读/每日外刊 解锁课程  (By chamberlen)
-^https:\/\/dict\.eudic\.net\/jingting\/GetThisChapterTaskStatus? url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/mryy.js
+#^https:\/\/dict\.eudic\.net\/jingting\/GetThisChapterTaskStatus? url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/mryy.js
 
 # 驾校一点通 (by @superuv)
 #^https:\/\/vipapi\.jxedt\.com\/vip\/check url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/jxydt.js
@@ -918,7 +922,7 @@ http://user.shywck.com/user/userinfo url script-response-body https://raw.ev2.wo
 #^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/bear.js
 
 #Pocket list (by @superuv)
-^https:\/\/pocketlists\.com\/api\/v1\/pocketlists.me.get url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/pock.js
+#^https:\/\/pocketlists\.com\/api\/v1\/pocketlists.me.get url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/pock.js
 
 #海豚记账 (by @superuv)
 https:\/\/book\.haitunwallet\.com\/app\/vip\/status url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/HTJZ.js
@@ -930,26 +934,26 @@ https:\/\/mubu\.com\/api\/app\/user\/info url script-response-body https://raw.e
 ^https:\/\/app\.xunjiepdf\.com\/api\/v4\/virtualactregister url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/znzj.js
 
 #猫咪翻译(by @superuv)
-http:\/\/miaow\.yiyongcad\.com\/api\/v4\/memprofile url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/mmfy.js
+#http:\/\/miaow\.yiyongcad\.com\/api\/v4\/memprofile url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/mmfy.js
 
 #微商助手(by @superuv)
 https:\/\/api\.lennou\.com\/user\/info url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/wszs.js
 
 #gk扫描仪(by @superuv)
-^https:\/\/api\.gkocr\.com\/api\/userlogin1.php url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/smy.js
+#^https:\/\/api\.gkocr\.com\/api\/userlogin1.php url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/smy.js
 
 #羞羞漫画解锁会员
 #使用方法：需要登录才可破解，未登录无法破解
-^http:\/\/c\.banghankeji\.com\/common\/MemberInfo\/getEntityByCode url script-response-body https://raw.githubusercontent.com/qianmo001/ACL4SSR/rm/xxmhvip.js
+#^http:\/\/c\.banghankeji\.com\/common\/MemberInfo\/getEntityByCode url script-response-body https://raw.githubusercontent.com/qianmo001/ACL4SSR/rm/xxmhvip.js
 
 #Varlens解锁PRO
-^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/Scripts/vspro.js
+#^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/Scripts/vspro.js
 
 #Python Ai解锁会员
 #^http:\/\/ws\.60he\.com\/(book|user).+ url script-response-body https://raw.githubusercontent.com/Zhuliyer/ADGai-nai/master/Quantumult%20X/Scripts/pyai.js
 
 #汉堡儿童睡前故事
-^https:\/\/www\.babybooks\.top\/v0\/profile url script-response-body https://gjds.vip/QX/pojie/sqgs.js
+#^https:\/\/www\.babybooks\.top\/v0\/profile url script-response-body https://gjds.vip/QX/pojie/sqgs.js
 
 #二蛋影视	
 ^http:\/\/vip\.0818km\.cn\/login\/login\/veifys\.html.+ url script-response-body https://gjds.vip/QX/pojie/egdd.js
