--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -63,7 +63,7 @@ hostname = api.revenuecat.com,api-sub.meitu.com,info.json,notability.com,buy.itu
 #Chic-Stylish Camera+解锁VIP
 #下载地址：http://mtw.so/6r6Rdt
 #*******************************
-^https:\/\/api-sub\.meitu\.com\/v2\/user\/vip_info\.json url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Chic.js
+#^https:\/\/api-sub\.meitu\.com\/v2\/user\/vip_info\.json url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Chic.js
 
 #Grow - 你的健康+恢复订阅
 #下载地址：http://u6v.cn/5IrhMX
@@ -119,17 +119,17 @@ https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-b
 #Scanner Pro+解锁订阅
 #下载地址：http://mtw.so/6bRcSt
 #*******************************
-^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Scanner.js
+#^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Scanner.js
 
 #Sorteds - 日历+解锁订阅
 #下载地址：http://mtw.so/6c4TCf
 #*******************************
-^https:\/\/api\.sortedapp\.com\/receipts\/verify url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Sorted.js
+#^https:\/\/api\.sortedapp\.com\/receipts\/verify url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Sorted.js
 
 #AI换脸秀+解锁VIP
 #下载地址：http://mtw.so/5PvhLM
 #*******************************
-^https:\/\/changeclothes\.szsszykj\.com\/interface\/GetIosVip.php url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/aihlx.js
+#^https:\/\/changeclothes\.szsszykj\.com\/interface\/GetIosVip.php url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/aihlx.js
 
 #傲软抠图-专业图片+解锁VIP
 #下载地址：http://mtw.so/6bOXrj
@@ -144,7 +144,7 @@ https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-b
 #1blocker+解锁订阅
 #下载地址：http://mtw.so/6c0tK5
 #*******************************
-^https:\/\/api\.revenuecat\.com\/v1\/subscribers url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/blocker.js
+#^https:\/\/api\.revenuecat\.com\/v1\/subscribers url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/blocker.js
 
 #白云天气-感知自然呼吸+解锁订阅
 #使用教程：如果不行解锁：点击免费试用，卸载在开启规则
@@ -175,7 +175,7 @@ https:\/\/api\.revenuecat\.com\/v1\/(subscribers|receipts) url script-response-b
 #Fin -预算与开销追踪+解锁订阅
 #下载地址：http://mtw.so/5PAabM
 #*******************************
-^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/fin.js
+#^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/fin.js
 
 #疯狂消消消+无限钻石金币
 #下载地址：#微信小程序://疯狂消消消
@@ -220,7 +220,7 @@ https:\/\/api4\.bybutter\.com\/v4\/* url script-response-body https://raw.github
 #来音智能陪练+解锁VIP
 #下载地址：http://mtw.so/5tfCxX
 #*******************************
-^https:\/\/partner-ai-api\.quthing\.com\/ai\/vip\/state url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ly.js
+#^https:\/\/partner-ai-api\.quthing\.com\/ai\/vip\/state url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ly.js
 
 
 #目标地图+解锁订阅
@@ -268,7 +268,7 @@ https:\/\/api4\.bybutter\.com\/v4\/* url script-response-body https://raw.github
 #Launch Center Pro+解锁订阅
 #下载地址：http://mtw.so/6rx8ZM
 #*******************************
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/pro.js
+#^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/pro.js
 
 #青柠海报设计+解锁VIP
 #下载地址：http://mtw.so/6rCMaa
@@ -297,7 +297,7 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account url script-response-body 
 #骰子猎人+解锁无限钻石金币
 #下载地址：http://mtw.so/5PsqKC
 #*******************************
-^https:\/\/cn-rest\.dhcn\.greenergrass\.games\/v1\/sync\/Player url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/szlr.js
+#^https:\/\/cn-rest\.dhcn\.greenergrass\.games\/v1\/sync\/Player url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/szlr.js
 
 #图图记账+恢复订阅
 #下载地址：http://u6v.cn/5XtW8F
@@ -406,7 +406,7 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account url script-response-body 
 #PDF—Expert点睛+解锁订阅
 #下载地址：https://is.gd/oYx3kv
 *******************************
-^https:\/\/license\.pdfexpert\.com\/api\/2\.0\/pdfexpert6\/subscription\/refresh url script-request-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/PDFExpert.js
+#^https:\/\/license\.pdfexpert\.com\/api\/2\.0\/pdfexpert6\/subscription\/refresh url script-request-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/PDFExpert.js
 
 #拼图鸭相机-解锁VIP
 #下载地址：https://is.gd/0GSZqD
@@ -421,7 +421,7 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account url script-response-body 
 #Varlens 微单相机+解锁VIP
 #下载地址：https://is.gd/tgiP0L
 *******************************
-^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Varlens.js
+#^https:\/\/mid\.zineapi\.com\/@varlens\/api\/user\/info\/ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Varlens.js
 
 #Focos+解锁订阅
 #下载地址：https://is.gd/vpRvsM
@@ -432,12 +432,12 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account url script-response-body 
 #Symbolab计算器 +解锁订阅
 #下载地址：https://is.gd/zbDsaa
 #*******************************
-^https?:\/\/scibug\.com\/appleSubscriptionValidate$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Symbolab.js
+#^https?:\/\/scibug\.com\/appleSubscriptionValidate$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Symbolab.js
 
 #MolyCam+解锁PRO
 #下载地址：https://is.gd/LomGzV
 #*******************************
-^https:\/\/pay\.wecut\.com\/apple\/iosVerifyReceipt\.php$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/MolyCam.js
+#^https:\/\/pay\.wecut\.com\/apple\/iosVerifyReceipt\.php$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/MolyCam.js
 
 #白描-OCR 文字识别+解锁黄金会员
 #下载地址：https://is.gd/qInUpQ
@@ -453,12 +453,12 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account url script-response-body 
 #尽简衣橱+解锁VIP
 #下载地址：https://is.gd/F7X6yd
 #*******************************
-^https:\/\/closet\.jinjian\.tech\/api\/v3\/apple_app_store\/resolve_receipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/jjyc.js
+#^https:\/\/closet\.jinjian\.tech\/api\/v3\/apple_app_store\/resolve_receipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/jjyc.js
 
 #Lr Adobe Lightroom+解锁订阅
 #下载地址：https://is.gd/UEAk0n
 #*******************************
-^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/lightroom.js
+#^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/lightroom.js
 
 #儿歌点点+解锁VIP
 #下载地址：https://is.gd/Og6DvK
@@ -484,6 +484,7 @@ http:\/\/yyy\.bosum\.com\/enterprise url script-response-body https://raw.github
 #下载地址：https://is.gd/CjkkBS
 #*******************************
 ^https:\/\/api\.vistopia\.com\.cn url script-request-header https://raw.githubusercontent.com/89996462/Quantumult-X/5f8e70232e2775b0fda58dcbf6a6da7faf3dca0a/ycdz/kanlixiang.js
+
 #Wink-像修图一样修视频+解锁VIP
 #下载地址：https://is.gd/o3yZv8
 #*******************************
@@ -512,22 +513,22 @@ https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body ht
 #网速管家+解锁VIP
 #下载地址：https://is.gd/46ZREk
 #*******************************
-^https:\/\/api-v3\.speedtest\.cn\/user\/info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/wsgj.js
+#^https:\/\/api-v3\.speedtest\.cn\/user\/info url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/wsgj.js
 
 #网速测试大师+解锁订阅
 #下载地址：https://is.gd/yQ8iFu
 #*******************************
-^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/wscsds.js
+#^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/wscsds.js
 
 #Pixelance Al照片修复+解锁订阅
 #下载地址：https://is.gd/jdWRxe
 #*******************************
-^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Pixelance.js
+#^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Pixelance.js
 
 #Collart 拼图趣+解锁订阅
 #下载地址：https://is.gd/qRbshJ
 #*******************************
-^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Collart.js
+#^https:\/\/iap\.etm\.tech\/receipts url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Collart.js
 
 #印章生成器+解锁订阅
 #下载地址：https://is.gd/neA2XY
@@ -537,12 +538,12 @@ https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body ht
 #阿布睡前故事+解锁VIP
 #下载地址：https://is.gd/6Q6lRw
 #*******************************
-http:\/\/tutugushiapi\.tutuerge\.com url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/abushuiqiangushi.js
+#http:\/\/tutugushiapi\.tutuerge\.com url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/abushuiqiangushi.js
 
 #米克锁屏+解锁订阅
 #下载地址：https://is.gd/RZKjWo
 #*******************************
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mksp.js
+#^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/mksp.js
 
 #全能小组件- Quike+解锁订阅
 #下载地址：https://is.gd/Vqtf83
@@ -552,27 +553,27 @@ http:\/\/tutugushiapi\.tutuerge\.com url script-response-body https://raw.github
 #Colorful—Widget+解锁订阅
 #下载地址：https://is.gd/5nkGAB
 #*******************************
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ColorfulWidget.js
+#^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ColorfulWidget.js
 
 #Widgetsmith+解锁订阅
 #特别说明：可以解锁全家桶💞
 #*******************************
-https://api.revenuecat.com/v1/(receipts|subscribers)/* url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/widgetSmith.js
+#https://api.revenuecat.com/v1/(receipts|subscribers)/* url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/widgetSmith.js
 
 #LovepDF-PDF+解锁订阅
 #下载地址：https://is.gd/yTNaH0
 #*******************************
-https://service.ilovepdf.com/v1/user url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/lovePdf.js
+#https://service.ilovepdf.com/v1/user url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/lovePdf.js
 
 #少年得到+解锁音频和视频内容
 #特别说明：不显示VIP—可解锁功能
 #*******************************
-^https:\/\/igetcool-gateway\.igetcool\.com url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/sndd.js
+#^https:\/\/igetcool-gateway\.igetcool\.com url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/sndd.js
 
 #vision-个人OKR目标+解锁订阅
 #下载地址：https://is.gd/X7S0eg
 #*******************************
-^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/vision.js
+#^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/vision.js
 
 #APTV+解锁订阅
 #下载地址：https://is.gd/inlPLD
