--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -64,7 +64,6 @@ hostname = pan.baidu.com,blog.csdn.net,*.openinstall.io,www.jianshu.com,post.smz
 #CDN 加速直连 raw.githubusercontent.com
 ^https://raw.githubusercontent.com url 307 https://raw.ev2.workers.dev
 
-
 ###########Peng-YM作者###########
 #hostname=greasyfork.org,openuserjs.org,guide-acs.m.taobao.com,gist.githubusercontent.com
 	
@@ -154,7 +153,7 @@ URL-REGEX,^https?:\/\/api\.zhihu\.com\/commercial_api\/launch_v2\? url reject-di
 # 知乎去除Tab页关注人头像
 ^https?:\/\/api\.zhihu\.com\/moments\/tab_v2 url reject-dict
 
-//什么值得买去广告
+#什么值得买去广告
 # 好价详情页去广告
 ^https?:\/\/haojia\.m\.smzdm\.com\/detail_modul\/other_modul url reject
 # 好价详情页红包小助手
@@ -207,7 +206,7 @@ URL-REGEX,^https?:\/\/api\.zhihu\.com\/commercial_api\/launch_v2\? url reject-di
 # ～ BiliBili_哔哩哔哩_小卡片广告@ddgksf2013
 ^https://api.bilibili.com/pgc/season/player/cards url reject-dict
 # ～ BiliBili_哔哩哔哩_解除SIM卡地区限制
-;(^https?:\/\/app\.biliintl.com\/intl\/.+)(&sim_code=\d+)(.+) url 302 $1$3
+#(^https?:\/\/app\.biliintl.com\/intl\/.+)(&sim_code=\d+)(.+) url 302 $1$3
 # ～ BiliBili_哔哩哔哩_去除搜索中的大家都在搜@bm7
 ^https?:\/\/api\.vc\.bilibili\.com\/search_svr\/v\d\/Search\/recommend_words url reject
 # ～ BiliBili_哔哩哔哩_去除动态中的话题@bm7
@@ -372,7 +371,7 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 ^https://m.douban.com/movie/subject/.+\?seen=\d url script-request-header https://raw.ev2.workers.dev/Neurogram-R/Quantumult-X/main/Douban.js
 
 ###########Liquor030作者###########
-//hostname = *.snssdk.com,rtbapi.douyucdn.cn,getuserinfo.321mh.com,langapi.lv-show.co,
+#hostname = *.snssdk.com,rtbapi.douyucdn.cn,getuserinfo.321mh.com,langapi.lv-show.co,
 
 #Remove 皮皮虾去Ad&去水印
 ^https?://.*\.snssdk\.com/bds/(feed/stream|comment/cell_reply|cell/cell_comment|cell/detail|ward/list|user/favorite|user/cell_coment|user/cell_userfeed|user/publish_list) url script-response-body https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Script/Super.js
@@ -389,7 +388,7 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 
 
 ###########ddgksf2013作者###########
-//hostname= *.xxjjappss.com,api.m.jd.com,shopmember.m.jd.com,testflight.apple.com
+#hostname= *.xxjjappss.com,api.m.jd.com,shopmember.m.jd.com,testflight.apple.com
 
 #小小影视最新版去广告&破解
 #**最新TF版**
@@ -407,12 +406,12 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShopMemberCardDetail&.+ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/unbind.js
 
 #解决国区TF中无法下载某些应用（QX、小火箭、LOON）的问题
-@^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*" request-body storefrontId" : "143441-1,29"
+#^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*" request-body storefrontId" : "143441-1,29"
 #M系列Mac解除iOS TF軟件下載限制
 #^https:\/\/testflight\.apple\.com((\/v3\/accounts\/.+?\/apps$)|(\/v2\/accounts\/.+?\/apps\/.+?\/builds\/.+)) url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/ForceInstall.js
 
 ###########杂乱有序###########
-//hostname=api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store,play-edge.itunes.apple.com, hls.itunes.apple.com, hls-svod.itunes.apple.com, vod-*.tv.apple.com, *.media.dssott.com, *.media.starott.com, atv-ps.amazon.com, atv-ps-fe.primevideo.com, *.hls.row.aiv-cdn.net, *.dash.row.aiv-cdn.net, cf-timedtext.aux.pv-cdn.net, *avodhlss3ww-a.akamaihd.net, d25xi40x97liuc.cloudfront.net, dmqdd6hw24ucf.cloudfront.net, d22qjgkvxw22r6.cloudfront.net, d1v5ir2lpwr8os.cloudfront.net, d27xxe7juh1us6.cloudfront.net, *.api.hbo.com, *.hbomaxcdn.com, manifest-dp.hulustream.com, livemanifest-f.hulustream.com, live-sc.hulustream.com, assets.huluim.com, assetshuluimcom-a.akamaihd.net, link.theplatform.com, *-pplus.cbs.com, vod-*.cbsaavideo.com, vod-*.cbsivideo.com, *.airspace-*.cbsivideo.com, content-discovery.uplynk.com, *-discovery1.uplynk.com, x-default-stgec.uplynk.com, dplus-ph-prod-vod.akamaized.net, dplus-ph-google-v2.prod-vod.h264.io, *.stream.peacocktv.com, *.cdn.peacocktv.com, *-vod.fubo.tv, hls.ted.com, pubads.g.doubleclick.net, vod-*.live.cf.md.bbci.co.uk, vod-*-live.akamaized.net, api.britbox.com
+#hostname=api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store,play-edge.itunes.apple.com, hls.itunes.apple.com, hls-svod.itunes.apple.com, vod-*.tv.apple.com, *.media.dssott.com, *.media.starott.com, atv-ps.amazon.com, atv-ps-fe.primevideo.com, *.hls.row.aiv-cdn.net, *.dash.row.aiv-cdn.net, cf-timedtext.aux.pv-cdn.net, *avodhlss3ww-a.akamaihd.net, d25xi40x97liuc.cloudfront.net, dmqdd6hw24ucf.cloudfront.net, d22qjgkvxw22r6.cloudfront.net, d1v5ir2lpwr8os.cloudfront.net, d27xxe7juh1us6.cloudfront.net, *.api.hbo.com, *.hbomaxcdn.com, manifest-dp.hulustream.com, livemanifest-f.hulustream.com, live-sc.hulustream.com, assets.huluim.com, assetshuluimcom-a.akamaihd.net, link.theplatform.com, *-pplus.cbs.com, vod-*.cbsaavideo.com, vod-*.cbsivideo.com, *.airspace-*.cbsivideo.com, content-discovery.uplynk.com, *-discovery1.uplynk.com, x-default-stgec.uplynk.com, dplus-ph-prod-vod.akamaized.net, dplus-ph-google-v2.prod-vod.h264.io, *.stream.peacocktv.com, *.cdn.peacocktv.com, *-vod.fubo.tv, hls.ted.com, pubads.g.doubleclick.net, vod-*.live.cf.md.bbci.co.uk, vod-*-live.akamaized.net, api.britbox.com
 
 
 #IT之家 新闻列表广告
@@ -462,7 +461,7 @@ https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShop
 # 全网最新最全新版YouTube去广告
 #解决播放中遇到广告自动跳回开头的问题
 #QuantumultX以及其他用户把下方udp这一段放在配置文件[general]处
-#udp_whitelist=53, 123, 1900, 80-442,
+#udp_whitelist=53, 123, 1900, 80-443,
 #这个配置可能会导致玩游戏的时候体验不好，
 #建议玩游戏的时候后面的里面的442改成443
 ctier=[A-Z] url 302 ctier=A
@@ -512,8 +511,7 @@ ctier=[A-Z] url 302 ctier=A
 ^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
 ^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
 
-#!name=去除 Youtube 广告 
-#!desc=去除 Youtube 广告（Beta）
+#去除 Youtube 广告 去除 Youtube 广告（Beta）
 # IOS > 15
 # 删除 瀑布流、视频、搜索中出现的广告和Shorts，
 # 删除 Shorts 内的视频广告
@@ -530,7 +528,6 @@ ctier=[A-Z] url 302 ctier=A
 
 #!name=🍿️ DualSubs for Streaming Media Platform
 #!desc=(V0.7.x) 流媒体平台字幕增强及双语模块
-#[Script]
 # DualSubs.Apple_TV.HLS.Main.m3u8
 ^https?:\/\/(play|play-edge|hls)\.itunes\.apple\.com\/WebObjects\/(MZPlay|MZPlayLocal)\.woa\/hls\/playlist\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
 # DualSubs.Apple_TV.HLS.WebVTT.m3u8
