--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -1,4 +1,4 @@
-hostname = pan.baidu.com,blog.csdn.net,*.openinstall.io,www.jianshu.com,post.smzdm.com,post.m.smzdm.com,oia.zhihu.com,link.zhihu.com,www.zhihu.com,www.google.com,raw.githubusercontent.com, greasyfork.org,openuserjs.org,guide-acs.m.taobao.com,gist.githubusercontent.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,trade-acs.m.taobao.com,api.m.jd.com,ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com, api.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,api.bilibili.com,manga.bilibili.com,grpc.biliapi.net,api.biliapi.net,*.byteoversea.com,*.tik-tokapi.com,*.tiktokv.com, api-access.pangolin-sdk-toutiao.com,mi.gdt.qq.com,open.e.kuaishou.com, spclient.wg.spotify.com,afd.baidu.com,boxer.baidu.com, *.baidu.com,tieba.baidu.com, m.weibo.cn,zhuanlan.zhihu.com, mp.weixin.qq.com,pan.baidu.com, m.douban.com, *.snssdk.com,rtbapi.douyucdn.cn,getuserinfo.321mh.com,langapi.lv-show.com, *.xxjjappss.com,api.m.jd.com,shopmember.m.jd.com,testflight.apple.com, api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store,play-edge.itunes.apple.com, hls.itunes.apple.com, hls-svod.itunes.apple.com, vod-*.tv.apple.com, *.media.dssott.com, *.media.starott.com, atv-ps.amazon.com, atv-ps-fe.primevideo.com, *.hls.row.aiv-cdn.net, *.dash.row.aiv-cdn.net, cf-timedtext.aux.pv-cdn.net, *avodhlss3ww-a.akamaihd.net, d25xi40x97liuc.cloudfront.net, dmqdd6hw24ucf.cloudfront.net, d22qjgkvxw22r6.cloudfront.net, d1v5ir2lpwr8os.cloudfront.net, d27xxe7juh1us6.cloudfront.net, *.api.hbo.com, *.hbomaxcdn.com, manifest-dp.hulustream.com, livemanifest-f.hulustream.com, live-sc.hulustream.com, assets.huluim.com, assetshuluimcom-a.akamaihd.net, link.theplatform.com, *-pplus.cbs.com, vod-*.cbsaavideo.com, vod-*.cbsivideo.com, *.airspace-*.cbsivideo.com, content-discovery.uplynk.com, *-discovery1.uplynk.com, x-default-stgec.uplynk.com, dplus-ph-prod-vod.akamaized.net, dplus-ph-google-v2.prod-vod.h264.io, *.stream.peacocktv.com, *.cdn.peacocktv.com, *-vod.fubo.tv, hls.ted.com, pubads.g.doubleclick.net, vod-*.live.cf.md.bbci.co.uk, vod-*-live.akamaized.net, api.britbox.com
+hostname = pan.baidu.com,blog.csdn.net,*.openinstall.io,www.jianshu.com,post.smzdm.com,post.m.smzdm.com,oia.zhihu.com,link.zhihu.com,www.zhihu.com,www.google.com,raw.githubusercontent.com, greasyfork.org,openuserjs.org,guide-acs.m.taobao.com,gist.githubusercontent.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,trade-acs.m.taobao.com,api.m.jd.com,ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com, api.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,api.bilibili.com,manga.bilibili.com,grpc.biliapi.net,api.biliapi.net,*.byteoversea.com,*.tik-tokapi.com,*.tiktokv.com, api-access.pangolin-sdk-toutiao.com,mi.gdt.qq.com,open.e.kuaishou.com, spclient.wg.spotify.com,afd.baidu.com,boxer.baidu.com, *.baidu.com,tieba.baidu.com, m.weibo.cn,zhuanlan.zhihu.com, mp.weixin.qq.com,pan.baidu.com, m.douban.com, *.snssdk.com,rtbapi.douyucdn.cn,getuserinfo.321mh.com,langapi.lv-show.com, testflight.apple.com, api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store,
 
 
 ###########elecC2作者###########	
@@ -348,12 +348,10 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 ^https?:\/\/.+?\.snssdk\.com\/ad\/ - reject
 
 #TestFlight账户管理脚本
-#主要功能：
-#1. 自动存储多个TestFlight账户，并自动合并APP列表，避免切换账户。
-#2. 账户内单个测试版APP允许多方共享：
-# - 导出：点击测试版APP -> 底部开发者许可协议 -> 复制密钥并分享给对方
-# - 导入：TestFlight 右上角"兑换" -> 粘贴密钥 -> 弹出保存成功通知后刷新APP列表
-# - 多方共享为实验性功能，双方都需要使用该脚本； 该功能主要解决某些APP的TF名额稀缺的问题
+#主要功能：1. 自动存储多个TestFlight账户，并自动合并APP列表，避免切换账户。2. 账户内单个测试版APP允许多方共享：
+# 导出：点击测试版APP -> 底部开发者许可协议 -> 复制密钥并分享给对方
+# 导入：TestFlight 右上角"兑换" -> 粘贴密钥 -> 弹出保存成功通知后刷新APP列表
+# 多方共享为实验性功能，双方都需要使用该脚本； 该功能主要解决某些APP的TF名额稀缺的问题
 #请注意，该脚本已经与"TF区域限制解除脚本"合并，如需使用该脚本请务必禁用它，否则可能出现APP安装异常
 ^https:\/\/testflight\.apple\.com\/v\d\/(app|account|invite)s\/ url script-analyze-echo-response https://raw.githubusercontent.com/NobyDa/Script/master/TestFlight/TestFlightAccount.js
 
@@ -386,27 +384,7 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 
 
 ###########ddgksf2013作者###########
-#hostname= *.xxjjappss.com,api.m.jd.com,shopmember.m.jd.com,testflight.apple.com
-
-#小小影视最新版去广告&破解
-#**最新TF版**
-#如果你每天观看视频次数较少，可以使用此配置
-#Download地址： tf.niux123.com
-#https:\/\/.*\..*\.com\/(vod\/reqplay\/|ucp\/index|getGlobalData|init) url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/xxys.js
-
-#取消绑定京东店铺会员
-// @Attention         不是自动，不是自动，需要手动操作
-// @Tips              两种方式：弹出通知点击取消会员+当前页面取消会员
-// @Function          便于手动取消京东开的店铺会员
-// @Steps             【我的】->【我的钱包】->【卡包】->【点击某一个卡包】
-// @Steps             点击某个卡包，会弹出通知，点击通知跳转浏览器手动注销会员，重复点击相同的卡包不会多次弹出通知
-^https:\/\/shopmember\.m\.jd\.com\/shopcard\/\?(venderId=[0-9]+).* url 302 https:\/\/shopmember\.m\.jd\.com\/member\/memberCloseAccount\?$1
-https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShopMemberCardDetail&.+ url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/unbind.js
-
-#解决国区TF中无法下载某些应用（QX、小火箭、LOON）的问题
-#^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*" request-body storefrontId" : "143441-1,29"
-#M系列Mac解除iOS TF軟件下載限制
-#^https:\/\/testflight\.apple\.com((\/v3\/accounts\/.+?\/apps$)|(\/v2\/accounts\/.+?\/apps\/.+?\/builds\/.+)) url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/ForceInstall.js
+#hostname= 
 
 ###########杂乱有序###########
 #hostname=api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store,play-edge.itunes.apple.com, hls.itunes.apple.com, hls-svod.itunes.apple.com, vod-*.tv.apple.com, *.media.dssott.com, *.media.starott.com, atv-ps.amazon.com, atv-ps-fe.primevideo.com, *.hls.row.aiv-cdn.net, *.dash.row.aiv-cdn.net, cf-timedtext.aux.pv-cdn.net, *avodhlss3ww-a.akamaihd.net, d25xi40x97liuc.cloudfront.net, dmqdd6hw24ucf.cloudfront.net, d22qjgkvxw22r6.cloudfront.net, d1v5ir2lpwr8os.cloudfront.net, d27xxe7juh1us6.cloudfront.net, *.api.hbo.com, *.hbomaxcdn.com, manifest-dp.hulustream.com, livemanifest-f.hulustream.com, live-sc.hulustream.com, assets.huluim.com, assetshuluimcom-a.akamaihd.net, link.theplatform.com, *-pplus.cbs.com, vod-*.cbsaavideo.com, vod-*.cbsivideo.com, *.airspace-*.cbsivideo.com, content-discovery.uplynk.com, *-discovery1.uplynk.com, x-default-stgec.uplynk.com, dplus-ph-prod-vod.akamaized.net, dplus-ph-google-v2.prod-vod.h264.io, *.stream.peacocktv.com, *.cdn.peacocktv.com, *-vod.fubo.tv, hls.ted.com, pubads.g.doubleclick.net, vod-*.live.cf.md.bbci.co.uk, vod-*-live.akamaized.net, api.britbox.com
@@ -522,111 +500,3 @@ ctier=[A-Z] url 302 ctier=A
 
 # Quantumult X Sub-store插件重写
 ^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
-
-#🍿️ DualSubs for Streaming Media Platform(V0.7.x) 流媒体平台字幕增强及双语模块
-# DualSubs.Apple_TV.HLS.Main.m3u8
-^https?:\/\/(play|play-edge|hls)\.itunes\.apple\.com\/WebObjects\/(MZPlay|MZPlayLocal)\.woa\/hls\/playlist\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Apple_TV.HLS.WebVTT.m3u8
-^https?:\/\/vod-(.+)-amt\.tv\.apple\.com\/itunes-assets\/(.+)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.+)_subtitles\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Apple_TV.SUB.WebVTT
-^https?:\/\/vod-(.+)-amt\.tv\.apple\.com\/itunes-assets\/(.+)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.+)\.webvtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Apple_TV_Plus.HLS.Main.m3u8
-^https?:\/\/(play|play-edge|hls)\.itunes\.apple\.com\/WebObjects\/(MZPlay|MZPlayLocal)\.woa\/hls\/subscription\/playlist\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Apple_TV_Plus.HLS.WebVTT.m3u8
-^https?:\/\/(play|play-edge|hls)\.itunes\.apple\.com\/WebObjects\/(MZPlay|MZPlayLocal)\.woa\/hls\/subscription\/stream\/playlist\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Apple_TV_Plus.SUB.WebVTT
-^https?:\/\/vod-(.+)-aoc\.tv\.apple\.com\/itunes-assets\/(.+)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.+)\.webvtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Apple_Fitness.HLS.Main.m3u8
-^https?:\/\/(play|play-edge|hls)\.itunes\.apple\.com\/WebObjects\/(MZPlay|MZPlayLocal)\.woa\/hls\/workout\/playlist\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Apple_Fitness.HLS.WebVTT.m3u8
-^https?:\/\/(hls|hls-svod)\.itunes\.apple\.com\/itunes-assets\/(.+)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.+)\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Apple_Fitness.SUB.WebVTT
-^https?:\/\/(hls|hls-svod)\.itunes\.apple\.com\/itunes-assets\/(.+)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.+)\.webvtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Disney_Plus.HLS.Main.m3u8
-^https?:\/\/(.+)\.media\.(dssott|starott)\.com\/ps01\/disney\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(cbcs|ctr)-all-(.+)\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Disney_Plus.HLS.WebVTT.m3u8
-^https?:\/\/(.+)\.media\.(dssott|starott)\.com\/ps01\/disney\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/r\/(.+)\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Disney_Plus.SUB.WebVTT
-^https?:\/\/(.+)\.media\.(dssott|starott)\.com\/ps01\/disney\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.+)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Prime_Video.HLS.Main.m3u8
-^https?:\/\/(.+)\.((hls|dash)\.row\.aiv-cdn|akamaihd)\.net\/(.+)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Prime_Video.HLS.WebVTT.m3u8
-^https?:\/\/(.+)\.cloudfront\.net\/(.+)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Prime_video.SUB.WebVTT
-^https?:\/\/(.+)\.cloudfront\.net\/(.+)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.HBO_Max.HLS.Main.m3u8
-^https?:\/\/manifests\.v2\.api\.hbo\.com\/hls\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.HBO_Max.HLS.WebVTT.m3u8
-^https?:\/\/manifests\.v2\.api\.hbo\.com\/hlsMedia\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.HBO_Max.SUB.WebVTT
-^https?:\/\/(.+)\.hbomaxcdn\.com\/videos\/(.+)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Hulu.HLS.Main.m3u8
-^https?:\/\/manifest-dp\.hulustream\.com\/hls\/(\d+)\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Hulu.JSON.playlist
-# ^https?:\/\/play\.hulu\.com\/(v\d)\/playlist url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.JSON.playlist.js
-# DualSubs.Hulu.HLS.WebVTT.m3u8
-^https?:\/\/manifest-dp\.hulustream\.com\/webvtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Hulu.SUB.WebVTT
-^https?:\/\/(assets\.huluim\.com|assetshuluimcom-a\.akamaihd\.net)\/captions_webvtt\/(.+[^blank])\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Paramount_Plus.HLS.Main.m3u8
-^https?:\/\/(vod-.*|(.+)\.airspace-.*|.*-pplus)\.(cbsaavideo|cbsivideo|cbs)\.com\/(.+)\/(master|manifest)\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Paramount_Plus.HLS.WebVTT.m3u8
-^https?:\/\/(vod-.*|(.+)\.airspace-.*|.*-pplus)\.(cbsaavideo|cbsivideo|cbs)\.com\/(.+)\/(stream_vtt|manifest_.*)\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Paramount_Plus.SUB.WebVTT
-^https?:\/\/(vod-.*|(.+)\.airspace-.*|.*-pplus)\.(cbsaavideo|cbsivideo|cbs)\.com\/(.+)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-^https?:\/\/cc\.cbs\.com\/closedcaption\/(.+)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Discovery_Plus.HLS.Main.m3u8
-^https?:\/\/content-discovery\.uplynk\.com\/(.+)\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-
-# DualSubs.Discovery_Plus_Ph.HLS.Main.m3u8
-^https?:\/\/dplus-ph-(prod-vod\.akamaized\.net|google-v2\.prod-vod\.h264\.io)\/(.+)\/master\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Discovery_Plus_Ph.HLS.WebVTT.m3u8
-^https?:\/\/dplus-ph-(prod-vod\.akamaized\.net|google-v2\.prod-vod\.h264\.io)\/(.+)\/captions\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Discovery_Plus_Ph.SUB.WebVTT
-^https?:\/\/dplus-ph-(prod-vod\.akamaized\.net|google-v2\.prod-vod\.h264\.io)\/(.+)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Peacock.HLS.Main.m3u8
-^https?:\/\/(.+)\.cdn\.peacocktv\.com\/pub\/global\/(.+)\/cmaf\/(.+)\/master_cmaf\.m3u8$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Peacock.HLS.WebVTT.m3u8
-^https?:\/\/(.+)\.cdn\.peacocktv\.com\/pub\/global\/(.+)\/cmaf\/(.+)\/[^\/]*subtitles[^\/]*\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Peacock.SUB.WebVTT
-^https?:\/\/(.+)\.cdn\.peacocktv\.com\/pub\/global\/(.+)\/cmaf\/(.+)\/[^\/]*subtitles[^\/]*\.webvtt(\?.*dualsubs=\w+)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Fubo_TV.HLS.Main.m3u8
-^https?:\/\/.*-vod\.fubo\.tv\/(.+)\/manifests\/master\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Fubo_TV.HLS.WebVTT.m3u8
-^https?:\/\/.*-vod\.fubo\.tv\/(.+)\/manifests\/subtitles\/(.+)\/media\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Fubo_TV.SUB.WebVTT
-^https?:\/\/.*-vod\.fubo\.tv\/(.+)\/manifests\/subtitles\/(.+)\.vtt(\?.*dualsubs=\w+)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.TED.HLS.Main.m3u8
-^https?:\/\/hls\.ted\.com\/(.+)\/manifest\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.TED.HLS.WebVTT.m3u8
-^https?:\/\/hls\.ted\.com\/(.+)\/subtitles\/(.+)\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.TED.SUB.WebVTT
-^https?:\/\/hls\.ted\.com\/(.+)\/subtitles\/(.+)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-
-# DualSubs.Google_Display_Network.HLS.Main.m3u8
-^https?:\/\/pubads\.g\.doubleclick\.net\/ondemand\/hls\/content\/(.+)\/master\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.Google_Display_Network.HLS.WebVTT.m3u8
-^https?:\/\/pubads\.g\.doubleclick\.net\/ondemand\/hls\/content\/(.+)\/media\/tt-(.+)\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.WebVTT.m3u8.js
-# DualSubs.Google_Display_Network.SUB.WebVTT
-^https?:\/\/pubads\.g\.doubleclick\.net\/ondemand\/hls\/content\/(.+)\/(hls-webvtt|vtt)\/(.+)\.vtt(\?.*dualsubs=\w+)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
-# DualSubs.Google_Display_Network.SUB.TTML
-# ^https?:\/\/pubads\.g\.doubleclick\.net\/ondemand\/hls\/content\/(.+)\/ttml\/(.+)\.ttml(\?.*dualsubs=\w+)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.TTML.js
-
-# DualSubs.BBC.HLS.Main.m3u8
-^https?:\/\/vod-hls-.*(\.live\.cf\.md\.bbci\.co\.uk|-live\.akamaized\.net)\/(.+)_hls_master\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.Main.m3u8.js
-# DualSubs.BBC.SUB.TTML
-# ^https?:\/\/vod-sub-.*(\.live\.cf\.md\.bbci\.co\.uk|-live\.akamaized\.net)\/iplayer\/subtitles\/(.+)(\.cc)?\.xml(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.TTML.js
-
-# DualSubs.Britbox.SUB.WebVTT
-^https?:\/\/api\.britbox\.com\/v1\/subtitles(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.SUB.WebVTT.js
